changed folder name and added new pages

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    counter-reset: section;
+    background-color: #0a192f;
+    color: #ffff;
+    
+}
