--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,30 @@
 <div>
-<img class="Logo" src="../assets/images/LMV-1.png" alt="">
-<ul class="nav_list">
+   
+<img class="Logo" src="../assets/images/LMV-1.png" alt="Logo" >
+
+<div class="nav_list">
+<ul >
   <li class="list_item">
-      <a  href="#About">About</a>
+      <a href="#About">{{'about' | translate}}</a>
   </li>
   <li class="list_item"> 
-      <a  href="#Future">Future</a>
+      <a i18n href="#Future">{{'future' | translate}}</a>
   </li> 
   <li class="list_item"> 
-      <a id="Contact" href="">Contact</a>
+      <a i18n id="Contact" href="">{{'contact' | translate}}</a>
   </li>
+<!-- </ul> -->
+<!-- <ul> -->
+  <li class="list_item_resumen"> <select  #selLang (change)="translateLanguageTo(selLang.value)">
+    <option *ngFor="let language of translate.getLangs()" [value]="language">{{ language }}</option>
+  </select>
+</li>
   <li class="list_item_resumen">
-      <a id="resumen" href="../assets/documents/Resume.pdf">Resume</a>
+      <a id="resumen" (click)="goToLink('../assets/documents/Resume.pdf')">{{'resume' | translate}}</a>
   </li>
+  
 </ul>
+</div>
 </div>
 
 
