--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,13 +3,23 @@
     display: inline-block;
     margin: 3px 0px 0px 3px;
 }
+.LanguageSelect{
+display:  inline-flex;
+float: right;
+margin-bottom: 25px;
+
+
+}
 .nav_list{
     display: inline-flex;
   height: 100%;
- margin: 20px 0px 0px 0px;
+ margin: 5px 0px 0px 0px;
  float: right;
  counter-reset: item;
  vertical-align: top;
+}
+.nav_list ul{
+    margin-top: 0;
 }
 
 .list_item_resumen a{
@@ -19,6 +29,15 @@
    padding: 12px 16px;
 border-radius: 8%;
 }
+.list_item_resumen select{
+    border: 2px solid #008080;
+    color: #008080;
+    text-decoration: none;
+   padding: 12px 16px;
+border-radius: 8%;
+background-color: #0a192f;
+}
+
 
 .list_item::before{
    
